<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_settings_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:activity=".LearnJavaActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarSettings"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?android:colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </com.google.android.material.appbar.AppBarLayout>

        <!-- Actual content of the activity -->
       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           app:layout_behavior="@string/appbar_scrolling_view_behavior">

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <TextView
                   android:id="@+id/textView2"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/notifications"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent" />

               <com.google.android.material.switchmaterial.SwitchMaterial
                   android:id="@+id/examNotificationsSwitch"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_margin="@dimen/margin"
                   android:switchPadding="@dimen/padding"
                   android:text="@string/exam_notifications"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/textView2" />

               <View
                   android:id="@+id/view"
                   android:layout_width="0dp"
                   android:layout_height="@dimen/separator_height"
                   android:layout_marginTop="@dimen/margin"
                   android:background="?separatorBackgroundColor"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@id/examNotificationsSwitch" />

               <TextView
                   android:id="@+id/textView4"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/difficulty"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/view"
                   android:layout_marginBottom="@dimen/small_margin"/>

               <RadioGroup
                   android:id="@+id/difficultyButtons"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="@dimen/margin"
                   android:layout_marginEnd="@dimen/margin"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/textView4">

                   <RadioButton
                       android:id="@+id/challengingButton"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/difficulty_challenging" />

                   <RadioButton
                       android:id="@+id/defaultButton"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/difficulty_default" />

                   <RadioButton
                       android:id="@+id/easyButton"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/difficulty_easy" />
               </RadioGroup>

               <View
                   android:id="@+id/view1"
                   android:layout_width="0dp"
                   android:layout_height="@dimen/separator_height"
                   android:layout_marginTop="@dimen/margin"
                   android:background="?separatorBackgroundColor"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@id/difficultyButtons" />

               <TextView
                   android:id="@+id/textView6"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/reset"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/view1" />

               <RelativeLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/resetBar"
                   app:layout_constraintTop_toBottomOf="@+id/textView6"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   android:padding="@dimen/padding">

                   <TextView
                       android:id="@+id/textView7"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/reset_details"
                       android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                       android:textSize="@dimen/small_text_size"
                       android:layout_alignParentStart="true"
                       android:layout_centerVertical="true"
                       android:layout_toStartOf="@id/resetButton"/>

                   <ImageButton
                       android:id="@+id/resetButton"
                       android:layout_width="@dimen/icon_size"
                       android:layout_height="@dimen/icon_size"
                       android:contentDescription="@string/reset_details"
                       android:onClick="resetButtonOnClick"
                       app:srcCompat="@drawable/right_arrow"
                       android:layout_marginStart="@dimen/margin"
                       android:layout_alignParentEnd="true"
                       android:layout_centerVertical="true"/>

               </RelativeLayout>

               <View
                   android:id="@+id/view2"
                   android:layout_width="0dp"
                   android:layout_height="@dimen/separator_height"
                   android:layout_marginTop="@dimen/margin"
                   android:background="?separatorBackgroundColor"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@id/resetBar" />

               <TextView
                   android:id="@+id/textView5"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/themes"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/view2" />

               <LinearLayout
                   android:id="@+id/themeSelectors"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@id/textView5"
                   android:layout_marginStart="@dimen/margin"
                   android:layout_marginEnd="@dimen/margin">

                   <Button
                       android:id="@+id/orangeThemeButton"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/orange_theme"
                       tools:ignore="ButtonStyle"
                       android:onClick="styleSelected"
                       android:layout_marginEnd="@dimen/margin" />

                   <Button
                       android:id="@+id/darkThemeButton"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:text="@string/dark_theme"
                       android:onClick="styleSelected"
                       android:layout_marginStart="@dimen/margin"
                       tools:ignore="ButtonStyle" />

               </LinearLayout>

               <View
                   android:id="@+id/view3"
                   android:layout_width="0dp"
                   android:layout_height="@dimen/separator_height"
                   android:layout_marginTop="@dimen/margin"
                   android:background="?separatorBackgroundColor"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@id/themeSelectors" />

               <TextView
                   android:id="@+id/textView8"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/screen"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/view3" />

               <com.google.android.material.switchmaterial.SwitchMaterial
                   android:id="@+id/keepAwakeSwitch"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_margin="@dimen/margin"
                   android:switchPadding="@dimen/padding"
                   android:text="@string/keep_awake_description"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/textView8" />

               <com.google.android.material.switchmaterial.SwitchMaterial
                   android:id="@+id/autoOpenSwitch"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_margin="@dimen/margin"
                   android:switchPadding="@dimen/padding"
                   android:text="@string/auto_open_unlocked_content_description"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/keepAwakeSwitch" />

           </androidx.constraintlayout.widget.ConstraintLayout>

       </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/view_nav_header"
        app:menu="@menu/learn_java_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>