...
    <string name="difficulty">Difficulty</string>
    <string name="difficulty_easy">Easy: 50% required to pass</string>
    <string name="difficulty_default">Default: 60% required to pass</string>
    <string name="difficulty_challenging">Challenging: 80% required to pass, limited time</string>
    <string name="reset">Reset progress</string>
    <string name="reset_details">Reset chapter, task and exam progression</string>
    <string name="reset_warning">This can\'t be undone. Are you sure?</string>
    <string name="reset_successful">The application was reset</string>
    <string name="themes">Themes</string>
    <string name="orange_theme">Orange</string>
    <string name="dark_theme">Dark</string>
    <string name="screen">Screen</string>
    <string name="keep_awake_description">Prevent screen from turning off</string>
    <string name="auto_open_unlocked_content_description">Automatically slide open unlocked content</string>
...
